# push_swap

./: CMakeLists.txt  Makefile  a_faire.md  checker  correction_script.sh  debug.c  dsf  libft  main.c  push_swap  push_swap.h  sources  utils_all.c  utils_projet.c
checker/: checker.h  checker_reader.c  main_checker.c  utils.c
checker.dSYM/Contents/Resources/DWARF/: checker
checker/getter_data/: header_getter_data.c  header_getter_data.h
checker/getter_data/src/: getter_is_good_nb.c  push_nb.c
checker/getter_data/test/: test_getter.c
checker/getter_data/utils/: utils.c
checker/test/: test_getter.c
do_commande/: first.c  push_pile.c  rev.c  reverse.c
graphique/: color.c  helper.c  list_rec.c  print_list.c  trace_with_mlx.c
header/: all_includes.h  debug.c  getter_header.h  header_checker.h  header_link_projet.h  push_struct.h  push_swap.h  stack_header.h  struct_visu.h
includes/: all_includes.h  push_struct.h  struct_visu.h
lib/: libft
libft/: .gitignore  CMakeLists.txt  Makefile  main.c  question.txt
libft/include/: gnl.h  libft_str_function.h
libft/includes/: libft.h
libft/includes/src/: argv_header.h  libft_buffer_str.h  libft_d_lst_function.h  libft_memory_function.h  libft_nb_function.h
libft/lib_for_rendu/includes/src/: dll_c_header.h  dll_l_header.h  libft_lst_function.h  libft_str_function.h
libft/object/buffer/buffer_obj_str/: buffer_obj_str.h
libft/object/double_linked_list/: double_linked_list.h
libft/object/double_linked_list/double_linked_list_object/: double_linked_list_construct.c
libft/object/manip_argv/: header_manip_argv.h
libft/object/manip_argv/argv/: construc_argv.c
libft/object/manip_argv/get_op/: get_op_constructor.c
libft/object/manip_argv/test/: test_manip_argv.c
libft/src/fonction/buffer_str/: ft_buffset_orprint_str.c  ft_print_buff_str.c
libft/src/fonction/char/: ft_free_doublechar_tab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_putchar.c  ft_toupper.c
libft/src/fonction/debug/: debug_str.c
libft/src/fonction/memory/: ft_bzero.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  soa.c
libft/src/fonction/nb/: ft_putnbr_fd.c
libft/src/fonction/sort/: ft_quick_sort.c
libft/src/fonction/str/: check_char_into_str.c  ft_is_all_number.c  ft_itoa.c  ft_putendl.c  ft_putstr.c  ft_strchr_dup.c  ft_strchr_len.c  ft_strclr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strndup.c  ft_strnew.c  ft_strnjoin.c  ft_strnstr.c  ft_strstr.c  ft_strsub.c  index_of_char.c
libft/src/objet/argv/: argv_contruct.c
old/: debug.c
old/solver_v1/src/push_in_b/: nb_isnt_limit.c  push_in_b.c
old/sort_v1/: short_3_front.c  sort_4_top.c  sort_4_top_a.c  sort_4_top_a_suite.c  sort_4_top_b.c  sort_4_top_b_suite.c
pile/: pile.h
push_swap/: Makefile  correction_script.sh  libft  main_push_swap.c  push_swap.c  push_swap.h  utils_pw.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
push_swap/includes/: all_includes.h
push_swap/reader/: reader.c
push_swap/solver/: solver.c  utils_solver.c
push_swap/solver/check_lim/: check_lim.c  find_best_way.c  loop_head.c  loop_tail.c  loop_utils.c  loop_utils_2.c
push_swap/solver/the_best_way/: find_best_way.c  loop_utils.c  way_by_head.c  way_by_tail.c
push_swap/src/: auteur  debug.c
push_swap/src/checker/: main_checker.c
push_swap/src/getter_data/: build_list_a_index.c  getter_is_good_nb.c
push_swap/src/solver/: main_solver.c
push_swap/src/solver/algo/: is_just_three.c
push_swap/src/solver/instruct/: instruct_helper.c  push_new_instruct.c
push_swap/src/solver/sort/: manage_sort.c
push_swap/utils/: atol.c  utils_main_pw.c
push_visu/: Makefile
push_visu/lib/libft/: Makefile
push_visu/lib/libft/include/: argv.h
push_visu/src/: debug.c
push_visu/src/checker/: main_checker.c
push_visu/src/getter_data/: getter_utils.c
push_visu/src/graphique/: list_rec.c
push_visu/src/solver/browse/: browse_simple.c
push_visu/src/solver/quick/: set_and_get_quick.c
reader/: reader.c  utils.c
rendu/: Makefile  auteur  checker  correction_script.sh  push_swap
rendu/includes/: all_includes.h  push_struct.h
rendu/lib/libft/: Makefile  ft_library_header.h
rendu/src/: debug.c
rendu/src/checker/: main_checker.c
rendu/src/getter_data/: getter_is_good_nb.c
rendu/src/solver/: graf_add_2.c  main_solver.c
rendu/src/stack/: construct_stack.c
src/: build_list_a_index.c  commun_all_prg.c  debug.c  sources
src/checker/: main_checker.c
src/checker/src/: checker_src.c
src/checker/test/: test_checker.c
src/getter_data/: build_list_a_index.c  get_list_a.c  getter_is_good_nb.c  getter_utils.c
src/getter_data/src/: getter_is_good_nb.c
src/getter_data/test/: test_getter.c
src/getter_data/utils/: utils.c
src/graphique/: color.c  helper.c  list_rec.c  print_list.c  trace_with_mlx.c
src/solver/: brain.c  browse_pile.c  build_list_a_index.c  graf_add.c  graf_add_1.c  graf_add_2.c  is_just_three.c  main_solver.c  push_new_instruct.c  quick.c  short.c  short_3_front.c  short_4.c  short_4_suite.c  swap.c  who_s_the_best.c
src/solver/algo/: brain.c  is_just_three.c
src/solver/browse/: browse_simple.c  first_browser.c
src/solver/commun/: get_median.c
src/solver/instruct/: instruct_helper.c  push_new_instruct.c
src/solver/quick/: get_med_quick.c  quick.c  set_and_get_quick.c
src/solver/sort/: manage_sort.c  sort_3_and_2.c  sort_4.c  sort_bower.c
src/solver/sort_top/: sort_2.c  sort_3.c  sort_4.c
src/solver/sort_v1/: short.c
src/solver/src/: median_calculation.c
src/solver_v1/: main_solver.c
src/solver_v1/src/: median_calculation.c
src/sources/include/: argv_header.h
src/stack/: construct_pile.c  construct_stack.c
src/stack/src/: pile_p.c  pile_r.c  pile_rr.c  pile_s.c  swap.c
src/stack/test/: test_pile.c
test/: getter_test.c  pile_test.c
v1/checker/: main_checker.c  utils.c
v1/do_commande/: exange.c  note  push_pile.c  reverse.c
v1/push_swap/: push_swap.c  utils_pw.c
v1/push_swap/reader/: reader.c
v1/push_swap/solver/: solver.c  utils_solver.c
(+119 files in other folders)
